# news-neutralizer

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  parse_gn.py  test_db.py  test_google_news.py  test_google_news2.py
.agent/skills/docker-compose/: SKILL.md
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  main.py  verify_url_search.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  articles.py  auth.py  feedback.py  generate.py  history.py  search.py  settings.py  sources.py  websocket.py
backend/app/core/: __init__.py  chunking.py  database.py  exceptions.py  rate_limit.py  redis_utils.py  security.py
backend/app/models/: __init__.py  base.py  domain.py
backend/app/schemas/: schemas.py
backend/app/services/: cache_manager.py  reliability.py
backend/app/services/ai/: __init__.py  anthropic_provider.py  base.py  clustering.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py
backend/app/services/scraper/: __init__.py  domain_filter.py  extractor.py  google_news.py  language_detector.py  paywall_detector.py  search.py  search_federated.py  sources.py  url_utils.py
backend/app/services/scraper/resolvers/: redirect_resolver.py
backend/app/tasks/: __init__.py  _celery_infra.py  domain_tasks.py  feedback_tasks.py  generate_tasks.py  search_tasks.py
backend/docs/architecture/: next-gen-proposal.md
backend/scripts/: deduplicate_db.py
backend/tests/api/routes/: test_preview.py
backend/tests/test_security/: test_rate_limiter.py
frontend/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  ts_errors.txt
(+39 files in other folders)
